# chat_with_audios

./: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  fetch_data_from_aws_s3  file_handling.py  main.py  push_to_aws_s3.py  pyproject.toml  rag_code.py  requirements.txt
context_refining_query/: global_context_file.txt
src/: audio_transcriber.py  database.py  embed.py  rag.py
